fix out of alignment for menu

--- a/src/App.css
+++ b/src/App.css
@@ -235,24 +235,25 @@ img {
 .box1 {
   display: flex;
   align-items: center;
-  justify-content: center
+  justify-content: center;
+  flex-direction: row;
 }
 
 
 .flex-item-left {
   background-color: white;
-  padding: 10px 100px 0px 150px; 
+ /* padding: 10px 100px 0px 150px; */
   flex: 20%;
-  height: 550px;
-  line-height: 30px;
+ /* height: 550px;
+  line-height: 30px;*/
  }
 
 .flex-item-right {
   background-color: white;
-  padding: 20px;
+ /* padding: 20px;*/
   flex: 80%;
-  height: 550px;
-  text-align: left;
+  /*height: 550px;
+  text-align: left;*/
 }
 
 .image {
